Metodo toObject em Aluguel e Cliente, para usar com o joptiondialog.

--- a/src/LojaVirtual/TelaNovoAluguel.form
+++ b/src/LojaVirtual/TelaNovoAluguel.form
@@ -109,7 +109,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Cliente.clientesToObject())"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox(Cliente.toObject())"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
