--- a/src/LojaVirtual/TelaEditarCliente.form
+++ b/src/LojaVirtual/TelaEditarCliente.form
@@ -3,6 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Editar Cliente"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection component="Form" name="getPreferredSize" type="method"/>
     </Property>
