--- a/src/LojaVirtual/TelaEditarProduto.form
+++ b/src/LojaVirtual/TelaEditarProduto.form
@@ -7,7 +7,7 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="maximizable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Novo Produto"/>
+    <Property name="title" type="java.lang.String" value="Editar Produto"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection component="Form" name="preferredSize" type="property"/>
     </Property>
