--- a/src/LojaVirtual/TelaListaCliente.form
+++ b/src/LojaVirtual/TelaListaCliente.form
@@ -3,7 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Produtos"/>
+    <Property name="title" type="java.lang.String" value="Clientes"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection component="Form" name="getPreferredSize" type="method"/>
     </Property>
