--- a/src/LojaVirtual/TelaNovoAluguel.form
+++ b/src/LojaVirtual/TelaNovoAluguel.form
@@ -7,7 +7,7 @@
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="maximizable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Nova venda"/>
+    <Property name="title" type="java.lang.String" value="Novo Aluguel"/>
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection component="Form" name="getPreferredSize" type="method"/>
     </Property>
